# manufy

./: .gitignore  LICENSE  README.md  pyproject.toml
manufy/: __init__.py  __main__.py  constants.py  files.py  lib.py  manual_document.py  settings.py
